--- a/blue-green/values.yaml
+++ b/blue-green/values.yaml
@@ -5,7 +5,7 @@
 replicaCount: 1
 
 image:
-  repository: notetake
+  repository: notetake/echo-server
   pullPolicy: IfNotPresent
 
 imagePullSecrets: []
