--- a/blue-green/templates/service.yaml
+++ b/blue-green/templates/service.yaml
@@ -1,13 +1,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "blue-green.fullname" . }}
+  name: {{ include "blue-green.name" . }}
   labels:
     {{- include "blue-green.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
   ports:
     - port: {{ .Values.service.port }}
+      targetPort: {{ .Values.service.targetPort }}
       protocol: TCP
       name: http
   selector:
