--- a/materials/blue-deployment.yaml
+++ b/materials/blue-deployment.yaml
@@ -3,6 +3,7 @@ kind: Deployment
 metadata:
   name: blue
 spec:
+  revisionHistoryLimit: 10
   selector:
     matchLabels:
       app: blue
@@ -14,7 +15,7 @@ spec:
       hostname: blue
       containers:
       - name: echo-server
-        image: notetake/echo-server:v2
+        image: notetake/echo-server:v1
         ports:
         - containerPort: 8080
         resources:
