--- a/materials/istio-traffic-shifter-job.yaml
+++ b/materials/istio-traffic-shifter-job.yaml
@@ -2,11 +2,15 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: istio-traffic-shift
+label:
+  app: istio-traffic-shift 
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
   name: istio-traffic-shift
+label:
+  app: istio-traffic-shift
 rules:
 - apiGroups: ["networking.istio.io"]
   resources: ["virtualservices"]
@@ -16,6 +20,8 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   name: istio-traffic-shift
+label:
+  app: istio-traffic-shift
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
@@ -38,5 +44,9 @@ spec:
         command:
         - "/bin/ash"
         - "-ecx"
-        - "/istio-traffic-shifter -virtualService blue-green -greenService blue-green2 -blueService blue-green -percentage 50"
+        - "/istio-traffic-shifter \
+          -virtualService blue-green \
+          -greenService blue-green-${ parameters.greenPipelineVersion } \
+          -blueService blue-green${ parameters.bluePipelineVersion } \
+          -percentage 100"
       restartPolicy: Never
