annotation in job template

--- a/materials/istio-traffic-shifter-job.yaml
+++ b/materials/istio-traffic-shifter-job.yaml
@@ -46,10 +46,11 @@ metadata:
   name: istio-traffic-shifter
   labels:
     app: istio-traffic-shifter
-  annotations:
-    sidecar.istio.io/inject: "false"
 spec:
   template:
+    metadata:
+      annotations:
+        sidecar.istio.io/inject: "false"
     spec:
       serviceAccountName: istio-traffic-shifter
       containers:
